# HaGame

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  cmake_install.cmake
Assets/Models/: Church.mtl  CubeAnimation.dae  Glock.mtl  KayakRack.mtl  Shotgun.mtl  camera.blend  camera.blend1  camera.mtl
Assets/Particles/: base.conf  crazy.conf  explosion.conf
Assets/Shaders/: batch_line_frag.glsl  batch_line_vert.glsl  batch_texture_frag.glsl  batch_texture_vert.glsl  color_frag.glsl  color_vert.glsl  drawing_frag.glsl  drawing_vert.glsl  exr_frag.glsl  grid_line_vert.glsl  light2d_frag.glsl  light2d_vert.glsl  lighting.glsl  material_frag.glsl  material_vert.glsl  particle_frag.glsl  particle_normal_frag.glsl  particle_normal_vert.glsl  particle_vert.glsl  pixel_frag.glsl  pixel_vert.glsl  screen_frag.glsl  screen_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  sprite2d_frag.glsl  sprite2d_normal_frag.glsl  sprite2d_vert.glsl  sprite3d_frag.glsl  sprite3d_vert.glsl  sprite_frag.glsl  sprite_vert.glsl  text3d_vert.glsl  text_vert.glsl  texture_frag.glsl  texture_vert.glsl
Config/: default_input.ini
Demos/: Demo.cpp  Demo.h
Demos/FPS/: FPS.hpp  level.txt
Demos/MiniJam/: DrawingSystem.h  MovementSystem.h  OneRoom.hpp  Pathfinding.hpp  ResourceSystem.h  ViewportSystem.h
Demos/SpriteSheetHelper/: SpriteSheetHelper.h
Editor/: Editor.cpp  Editor.h
Editor/Systems/: CameraController.h  MousePicker.h  Renderer.h  UI.h
Goom2/: Goom2.cpp  Goom2.h
Goom2/Components/: Actor.h  Bullet.h  Enemy.h  Health.h  Inventory.h  PlayerController.h  PlayerRenderer.h  Projectile.h  Target.h  Weapon.h
Goom2/Scenes/: MainMenu.h  MapBuilder.h  Sandbox.h
Goom2/Systems/: ActorSystem.h  EnemySystem.h  PlayerSystem.h  ResourceSystem.h  WeaponSystem.h
HaGame/: HaGame.cpp  HaGame.h
HaGame/Audio/: Audio.h  Sample.h
HaGame/Core/: Game.cpp  Game.h  Object.h  Publisher.h  ResourceManager.cpp  ResourceManager.h  Scene.h  Subscriber.h  Transform.cpp  Transform.h
HaGame/Demos/: ECS.hpp
HaGame/Graphics/: AnimatedSprite.h  BatchRenderer.cpp  BatchRenderer.h  Buffer.hpp  Camera.h  Circle.hpp  Color.cpp  Color.h  Cone.hpp  Cubemap.h  Cylinder.hpp  DataType.h  Disc.hpp  DynamicMesh.hpp  EXR.h  Font.h  FrameBuffer.hpp  GridLines.h  Image.h  Light.h  Line.h  LineBuffer.cpp  LineBuffer.h  LineBuffer.hpp  Material.cpp  Material.h  Mesh.h  MeshBuffer.cpp  MeshBuffer.h  OpenGL.h  OrthographicCamera.hpp  ParticleEmitter.h  PerspectiveCamera.hpp  Pixel.h  PixelGrid.h  Plane.h  Primitives.h  Quad.hpp  RawTexture.h  RectPrism.hpp  (+23 more)
HaGame/Input/: Device.h  InputManager.h
HaGame/Math/: AABB.h  Capsule.h  Collisions.cpp  Collisions.h  Disc.h  Functions.h  Hypercube.h  Interval.h  Line.h  LineSegment.h  Matrix.h  NSphere.h  OBB.h  Perlin.h  Plane.h  Polygon.h  Quaternion.h  Ray.h  Sample.h  Sphere.h  Surface.h  Triangle.h  Vector.h
HaGame/Physics/: BoundingVolume.h  Collisions.cpp  Collisions.h  GridPartition.h  IPartition.h  RigidBody.h
HaGame/UI/: AssetBrowser.h  Editable.h  EntityTree.h  FileBrowser.h  FileTree.h  ResourceBrowser.h  UI.h
HaGame/Utils/: Aliases.h  Buffer.h  ConfigParser.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  Grid.h  GridMap.h  Memory.h  ObjectManager.h  Path.h  Promise.h  Random.h  RectGrid.h  Serializable.h  SpacialMap.h  SpatialMap.h  StateManager.h  String.cpp  String.h  Testing.h  TileGrid.h  TimedCallback.h  Timer.h  UUID.h  Watchable.hpp
HaGame3D_v1/: CMakeLists.txt  HaGame3D_v1.cpp  HaGame3D_v1.h
HaGame3D_v1/Assets/Models/: boeing747.mtl  jet.mtl
HaGame3D_v1/Assets/Shaders/: color_frag.glsl  color_vert.glsl  material_frag.glsl  material_vert.glsl  particle_frag.glsl  particle_vert.glsl  simple_frag.glsl  simple_vert.glsl  sprite_frag.glsl  sprite_vert.glsl
HaGame3D_v1/Core/: Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  Scene.h  Transform.cpp  Transform.h
HaGame3D_v1/Core/ECS/: Entity.h  EntityManager.h  System.h
HaGame3D_v1/Demos/: Breakout.hpp  ECS.hpp
HaGame3D_v1/Demos/levels/: level1
HaGame3D_v1/Graphics/: Camera.cpp  Camera.h  Color.h  Mesh.h  Monitors.h  OpenGL.cpp  OpenGL.h  Particle.h  Primitives.h  Routines.cpp  Routines.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.h  Texture.cpp  Texture.h  Window.cpp  Window.h
HaGame3D_v1/Input/: Device.h
HaGame3D_v1/Input/Devices/: Gamepad.h  KeyboardMouse.h
HaGame3D_v1/Math/: Functions.h  Hypercube.h  Matrix.h  Quaternion.h  Vector.h
HaGame3D_v1/Physics/: Collisions.cpp  Collisions.h
HaGame3D_v1/Utils/: Aliases.h  Clock.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  Logger.h  ObjectManager.h  Reflection.h  StateManager.h  String.cpp  String.h
HaGame3D_v1/Utils/Loggers/: ConsoleLogger.h
ImSim/: ImSim.cpp  ImSim.h
ImSim/Common/: RuntimeLevel.hpp
ImSim/Components/: Gizmo.hpp  Player.hpp  PlayerMovement.hpp
ImSim/Scenes/: Level1.hpp  Level2.hpp  Level3.hpp  LevelEditor.hpp  TestScene.hpp
ImSim/Systems/: CameraMovement.hpp  GizmoSystem.hpp  LevelEditorSystem.hpp  MouseSystem.hpp  Movement.hpp  ProjectileSystem.hpp  StateSystem.hpp  WeaponSystem.hpp
SpaceHorror/: SpaceHorror.cpp  SpaceHorror.h
SpaceHorror/Common/: Colors.h  Config.h  EditorTools.h  InventoryItem.h  RuntimeLevel.cpp  RuntimeLevel.h  Weapons.cpp  Weapons.h
SpaceHorror/Components/: BulletHole.h  GravityZone.h  Health.h  HealthBarRenderer.h  MovingPlatform.h  Platformer.h  PlayerController.h  Star.h  WeaponController.h
SpaceHorror/Config/: Bullets.conf  Game.conf  Tiles.conf  Weapons.conf
SpaceHorror/Scenes/: Demo.cpp  Demo.h  Editor.cpp  Editor.h  Home.h  Runtime.cpp  Runtime.h
SpaceHorror/Systems/: AISystem.cpp  AISystem.h  CustomRenderSystem.h  GravitySystem.h  HealthSystem.h  PlatformerSystem.cpp  PlatformerSystem.h  StarSystem.h  WeaponSystem.h
SpaceHorror/UIElements/: LightEditor.h
Tools/EXRLoader/: EXRLoader.cpp
Tools/ParticleEditor/: ParticleEditor.cpp  ParticleEditor.h
modules/: FIndGLM.cmake  FindBox2D.cmake  FindGLEW.cmake  FindGLUT.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  FindTinyEXR.cmake
(+234 files in other folders)
