# CMakeList.txt : CMake project for HaGame3D_v1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (HaGame3D_v1 "HaGame3D_v1.cpp" "HaGame3D_v1.h" "Math/Vector.h")

# TODO: Add tests and install targets if needed.
